added new swagger setup
