# controllers/Server.js
@@ -3,7 +3,7 @@
 var url = require('url');
 
 
-var Server = require('./ServerService');
+var Server = require('../ts.controllers/ServerService');
 
 
 module.exports.clearMonitoredItem = function clearMonitoredItem (req, res, next) {
@@ -12,6 +12,10 @@ module.exports.clearMonitoredItem = function clearMonitoredItem (req, res, next)
 
 module.exports.clearMonitoredItems = function clearMonitoredItems (req, res, next) {
   Server.clearMonitoredItems(req.swagger.params, res, next);
+};
+
+module.exports.connectServer = function connectServer (req, res, next) {
+  Server.connectServer(req.swagger.params, res, next);
 };
 
 module.exports.getBrowseInfo = function getBrowseInfo (req, res, next) {
@@ -26,24 +30,16 @@ module.exports.getMonitoredItems = function getMonitoredItems (req, res, next) {
   Server.getMonitoredItems(req.swagger.params, res, next);
 };
 
+module.exports.getServerConnectionState = function getServerConnectionState (req, res, next) {
+  Server.getServerConnectionState(req.swagger.params, res, next);
+};
+
 module.exports.monitorItem = function monitorItem (req, res, next) {
   Server.monitorItem(req.swagger.params, res, next);
 };
 
 module.exports.readVariableValue = function readVariableValue (req, res, next) {
   Server.readVariableValue(req.swagger.params, res, next);
-};
-
-module.exports.serverGET = function serverGET (req, res, next) {
-  Server.serverGET(req.swagger.params, res, next);
-};
-
-module.exports.serverUrlGET = function serverUrlGET (req, res, next) {
-  Server.serverUrlGET(req.swagger.params, res, next);
-};
-
-module.exports.serverUrlPOST = function serverUrlPOST (req, res, next) {
-  Server.serverUrlPOST(req.swagger.params, res, next);
 };
 
 module.exports.writeVariableValue = function writeVariableValue (req, res, next) {
